add media queries to Tours and Contact page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="container  about-content">
                 <div class="row  d-flex align-items-center content-item">
                     <div class="col-12 col-md-6">
-                        <div class="card card-body">
+                        <div class="card card-about">
                             <img src="assets/images/about-team.jpg" class="card-img" alt="The hikers team">
                             <div class="card-desc">
                                 <h3>Meet Our Team</h3>
@@ -125,9 +125,9 @@
                 </div>
             </div>
 
-            <div class="container">
-                <div class="row my-5 content-item-text tours-style">
-                    <div class="col-12">
+            <div class="container ">
+                <div class="row my-5 content-item-text  ">
+                    <div class="col-12 tours-style">
                         <h2><i class="fab fas fas fa-hiking"></i> Tour option to chose :</h2>
                         <p> We are organizing hiking tours from half day up to three days including a certified tour
                             guide with a good sense of humor and include
@@ -151,11 +151,11 @@
 
             <div class="container">
                 <div class="row my-4">
-                    <div class="col">
+                    <div class="col tours-images-style">
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md d-flex">
-                                <div class="card card-body flex-fill">
+                                <div class="card card-tours flex-fill">
                                     <!-------CREDIT: Photo by Steven Hylands from Pexels------->
                                     <img src="assets/images/wicklow.jpg" class="card-img" alt="Wicklow mountain view">
                                     <div class="card-body-desc">
@@ -164,18 +164,18 @@
                                 </div>
                             </div>
                             <div class="col-md d-flex">
-                                <div class="card card-body flex-fill">
+                                <div class="card card-tours flex-fill">
                                     <!-------CREDIT: Image by _Artemis_ from Pixabay------->
                                     <img src="assets/images/connemara.jpg" class="card-img"
                                         alt="Conemara mountain view">
                                     <div class="card-desc">
-                                        <h3>Conemara Mountain Tour</h3>
+                                        <h3>Conemara Mountain Tours</h3>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-md d-flex">
-                                <div class="card card-body flex-fill">
+                                <div class="card card-tours flex-fill">
                                     <!-------CREDIT: Image by Nanni05 from Pixabay------->
                                     <img src="assets/images/cliffs-of-moher.jpg" class="card-img"
                                         alt="Land Rover driving through mud">
@@ -189,6 +189,7 @@
                 </div>
             </div>
         </div> 
+        
         </section>
     </div>
 
@@ -229,12 +230,12 @@
                                 placeholder="Your full name..." required>
                         </div>
                         <div class="form-group">
-                            <label for="email">Email address:</label>
+                            <label for="email">Email Address:</label>
                             <input type="text" class="input-box" id="email" name="email"
                                 placeholder="Your email address..." required>
                         </div>
                         <div class="form-group">
-                            <label for="tour">Tours available</label>
+                            <label for="tour">Tours Available</label>
                             <select id="tour" name="tour" class="input-box">
                                 <option value="wicklow-tour">Wicklow mountain tour</option>
                                 <option value="connemara-tour">Conemara mountain tour</option>
