--- a/gallery.html
+++ b/gallery.html
@@ -30,17 +30,17 @@
                             <a class="nav-link" id="navbar-color-home"  href="index.html">Home <span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="navbar-color-about"  href="index.html#position-about">About</a>
+                            <a class="nav-link" id="navbar-color-about"  href="index.html#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="navbar-color-tours"  href="index.html#position-tours">Tours</a>
+                            <a class="nav-link" id="navbar-color-tours"  href="index.html#tours">Tours</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="navbar-color-gallery" href="#">Gallery<span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="navbar-color-contact" href="index.html#position-contact">Contact</a>
+                            <a class="nav-link" id="navbar-color-contact" href="index.html#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -49,10 +49,10 @@
     </header>
         <!---------------------- Main navigation ------------------------->
     
-    <div id="position-gallery">
+    <div id="gallery">
     <section>
         <div class="container">
-            <div class="row mt-5 heading-text">
+            <div class="row mt-5 d-flex justify-content-center heading-text">
                 <div class="col-m">
                     <h1>Gallery</h1>
                 </div>
@@ -60,67 +60,105 @@
         </div>
         <div class="container">
             <div class="row">
-                 <div class="col-12 col-md-6 col-xl-3 image">
-                     <a href="assets/images/gallery/girls-camping.jpg" target="_blank">
-                    <img src="assets/images/gallery/girls-camping.jpg" class="image-style" alt="girls camping">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/girls-camping.jpg" target="_blank">
+                        <img src="assets/images/gallery/girls-camping.jpg" class="image-style" alt="girls camping">
                     </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
-                    <img src="assets/images/gallery/connemara-tour.jpg" class="image-style" alt="connemara tour">
+                 <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/connemara-tour.jpg" target="_blank">
+                        <img src="assets/images/gallery/connemara-tour.jpg" class="image-style" alt="connemara tour">
+                    </a>
                 </div>
-                  <div class="col-12 col-md-6 col-xl-3 image">
+                  <div class="col-12 col-md-6 col-xl-3">
+                      <a href="assets/images/gallery/the-girl-by-the-stream.jpg" target="_blank">
                     <img src="assets/images/gallery/the-girl-by-the-stream.jpg" class="image-style" alt="the girls by the stream">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/girls-on-the-beach.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-on-the-beach.jpg" class="image-style" alt="girls on the beach">
+                    </a>
                 </div>
-               <div class="col-12 col-md-6 col-xl-3 image">
+               <div class="col-12 col-md-6 col-xl-3">
+                   <a href="assets/images/gallery/mountain-view.jpg" target="_blank">
                     <img src="assets/images/gallery/mountain-view.jpg" class="image-style" alt="mountain view">
+                    </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
+                     <a href="assets/images/gallery/girls-in-the-forest.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-in-the-forest.jpg" class="image-style" alt="girls in the forest">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/irish-sheep.jpg" target="_blank">
                     <img src="assets/images/gallery/irish-sheep.jpg" class="image-style" alt="irish sheep">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/group-on-the-mountain.jpg" target="_blank">
                     <img src="assets/images/gallery/group-on-the-mountain.jpg" class="image-style" alt="group on the mountain">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/couple-in-the-car.jpg" target="_blank">
                     <img src="assets/images/gallery/couple-in-the-car.jpg" class="image-style" alt="couple in the car">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/wicklow-tour.jpg" target="_blank">
                     <img src="assets/images/gallery/wicklow-tour.jpg" class="image-style" alt="wicklow tour">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/girls-by-the-lake.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-by-the-lake.jpg" class="image-style" alt="girls by the lake">
+                    </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
+                     <a href="assets/images/gallery/on-the-mountain.jpg" target="_blank">
                     <img src="assets/images/gallery/on-the-mountain.jpg" class="image-style" alt="on the mountain">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/lunch-break.jpg" target="_blank">
                     <img src="assets/images/gallery/lunch-break.jpg" class="image-style" alt="lunch break">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/girls-beside-the-cross.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-beside-the-cross.jpg" class="image-style" alt="girls beside the cross">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/view-on-top-of-mountain.jpg" target="_blank">
                     <img src="assets/images/gallery/view-on-top-of-mountain.jpg" class="image-style" alt="view on top of mountain">
+                    </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
+                     <a href="assets/images/gallery/girls-by-the-waterfall.jpg" target="_blank">
                     <img src="assets/images/gallery/girls-by-the-waterfall.jpg" class="image-style" alt="girls by the waterfall">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/girl-on-the-beach.jpg" target="_blank">
                     <img src="assets/images/gallery/girl-on-the-beach.jpg" class="image-style" alt="girls on the beach">
+                    </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
+                     <a href="assets/images/gallery/our-tour-guide.jpg" target="_blank">
                     <img src="assets/images/gallery/our-tour-guide.jpg" class="image-style" alt="our tour guy">
+                    </a>
                 </div>
-                 <div class="col-12 col-md-6 col-xl-3 image">
+                 <div class="col-12 col-md-6 col-xl-3">
+                     <a href="assets/images/gallery/girl-on-the-rock.jpg" target="_blank">
                     <img src="assets/images/gallery/girl-on-the-rock.jpg" class="image-style" alt="girls on the rock">
+                    </a>
                 </div>
-                <div class="col-12 col-md-6 col-xl-3 image">
+                <div class="col-12 col-md-6 col-xl-3">
+                    <a href="assets/images/gallery/keel-strand-sign.jpg" target="_blank">
                     <img src="assets/images/gallery/keel-strand-sign.jpg" class="image-style" alt="keel strand sign">
+                    </a>
                 </div>
             </div>
         </div>
@@ -131,13 +169,13 @@
         <div class="contact">
             <ul class="contact-links ">
                 <li class="contact-links-item">
-                    <a href="mailto:thehikers@ireland.ie" aria-label="Our Email Address">
+                    <a href="mailto:thehikers@ireland.ie" aria-label="Go to our Email Address (opens in new tab)">
                         <i class="fas fa-envelope" aria-hidden="true"></i>
                         thehikers@ireland.ie
                     </a>
                 </li>
                 <li class="contact-links-item">
-                    <a href="tel:+012345678" aria-label="Our Phone Number">
+                    <a href="tel:+012345678" aria-label="Go to our Phone Number">
                         <i class="fas fa-phone-alt" aria-hidden="true"></i>
                         555 4657800
                     </a>
@@ -146,17 +184,17 @@
         </div>
         <ul class="social-network">
             <li>
-                <a href="https://www.facebook.com" target="_blank" aria-label="Find Us Facebook">
+                <a href="https://www.facebook.com" target="_blank" aria-label="Go to our Facebook page(opens in a new tab)">
                     <i class="fab fa-facebook-f"></i>
                 </a>
             </li>
             <li>
-                <a href="https://twitter.com" target="_blank" aria-label="Find Us Twitter">
+                <a href="https://twitter.com" target="_blank" aria-label="Go to our Twitter page(opens in a new tab)">
                     <i class="fab fa-twitter"></i>
                 </a>
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" aria-label="Find Us Instagram">
+                <a href="https://instagram.com" target="_blank" aria-label="Go to our Instagram page(opens in a new tab)">
                     <i class="fab fa-instagram"></i>
                 </a>
             </li>
