add background images for small devices and media queries

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         <div class="jumbotron text-center">
                             <h1 class="welcome-sign-top">Unforgettable Hiking In Ireland</h1>
                             <hr>
-                            <p class="lead welcome-sign-bottom">Travelling shouldn't be just a tour, It should be a tale.<br>
-                                And we are striving to make it a very special one</p>
+                            <p class="lead welcome-sign-bottom">Travelling Shouldn't Be Just A Tour, It Should Be A Tale.<br>
+                                And We Are Striving To Make It A Very Special One</p>
                             <p>
                                 <a class="btn btn-primary btn-lg btn-style" href="#contact" role="button">Book a tour with
                                     us!</a>
@@ -82,7 +82,7 @@
 
             <div class="container  about-content">
                 <div class="row  d-flex align-items-center content-item">
-                    <div class="col-12 col-md-6 ">
+                    <div class="col-12 col-lg-6 ">
                         <div class="card card-about">
                             <a href="assets/images/about-team.jpg" target="_blank">
                             <img src="assets/images/about-team.jpg" class="card-img" alt="The hikers team">
@@ -93,7 +93,7 @@
                              
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 content-item-text">
+                    <div class="col-12 col-lg-6 content-item-text">
                         <h4> Welcome to the Ireland hiking of our dreams,<br> we hope yours too</h4>
                         <p>If you love hiking, you are fascinated by wonderful views, looking for adventure and you
                             would
