--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
     <section>
         <div class="container">
             <div class="row mt-5 d-flex justify-content-center heading-text">
-                <div class="col-m">
+                <div class="col">
                     <h1>Gallery</h1>
                 </div>
             </div>
