--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             <p class="lead welcome-sign-bottom">Travelling Shouldn't Be Just A Tour, It Should Be A Tale.<br>
                                 And We Are Striving To Make It A Very Special One</p>
                             <p>
-                                <a class="btn btn-primary btn-lg btn-style" href="#contact" role="button">Book a tour with
-                                    us!</a>
+                                <a class="btn btn-primary btn-lg btn-style" href="#contact" role="button">Book A Tour With
+                                    Us!</a>
                             </p>
                         </div>
                 </div>
@@ -94,20 +94,19 @@
                         </div>
                     </div>
                     <div class="col-12 col-lg-6 content-item-text">
-                        <h4> Welcome to the Ireland hiking of our dreams,<br> we hope yours too</h4>
-                        <p>If you love hiking, you are fascinated by wonderful views, looking for adventure and you
-                            would
-                            like to know more about
-                            the interesting history about Ireland, then you have come to the right place</p>
-                        <p>We are a small group of friends who are passionate about hiking in Ireland. We have walked
-                            the
-                            Irish mountains for many
-                            kilometers and each time it is an amazing and unforgettable experience for us.</p>
-                        <p>Our certified guide Arek and the main organizer who is passionate about the history of
-                            Ireland,
-                            can tell you many interesting stories about this beautiful, scenic and wonderful country.
+                        <h4> Welcome to the Ireland hiking of our dreams, We hope yours too</h4>
+                        <p>If you love hiking, you are fascinated by wonderful views and magnificent scenery, and looking for adventure
+                           packed with an interesting stories about the Irish history, then you are in the right place!
                         </p>
-                        <p><strong style="font-weight: 400;">We hope to see you soon on one of our trips</strong></p>
+                        <p>We are a small group of friends who are passionate about hiking in Ireland. We have walked
+                            the Irish mountains for many kilometers and each time it is an amazing and unforgettable experience for us.
+                        </p>
+                        <p>Our main organizer and Certified Guide – Arek is very passionate about Irish history and can tell you
+                            many interesting stories about this beautiful, scenic and wonderful country.
+
+                        </p>
+                        <p><strong style="font-weight: 400;">We hope to see you soon on one of our trips</strong>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -132,14 +131,14 @@
                 <div class="row my-5 content-item-text  ">
                     <div class="col-12 tours-style">
                         <h2><i class="fab fas fas fa-hiking"></i> Tour option to chose :</h2>
-                        <p> We are organizing hiking tours from half day up to three days including a certified tour
-                            guide with a good sense of humor and include
-                            different variations for the trails in the region you choose to go to, depending on your
-                            time, desire, age and level of advancement,
-                            we will select and organize a trip for you. The price is estimated depending on the number
-                            of days you choose, season, accommodation and food you choose. Tell us what you expect and
-                            we
-                            will organize a trip for you. <br>For more information:<br>
+                        <p> We organize tours from short strolls to multi-day hikes with our Certified Guide who will 
+                            look after not only your safety but also entertainment, as  good sense of humour is Arek’s
+                            tremendous asset. Our tours include a variation of the trails in the region of your choice
+                            and are carefully selected and personalized to suit your time, age, and level of advancement. 
+                            The cost of our hiking tours is based on the length of time, season requirements, accommodation, 
+                            and food preferences. Let us know about your hopes and expectations, and we will look after the
+                            organization of an incredibly special adventure for you.
+                            <br>For more information:<br>
                             <a href="#position-contact" class="contact-details" aria-label="Go to our contact form">
                                 <strong><i class="fas fa-envelope" aria-hidden="true"></i> Contact Us </strong>
                             </a><br>
@@ -212,15 +211,17 @@
             <div class="container">
                 <div class="row content-item-text">
                     <div class="col">
-                        <h2>Contact Us</h2>
                         <p>
-                            If you would like to leave a comment for us, have a questions about our tours, or the one you are interested in,
-                            fill out the contact form and write your enquiry and we will get back to you as soon as possible or <strong>Call Us:</strong> 
+                            If you would like to leave a comment or have a question about one of our tours or have 
+                            a specific place you would like to visit, please fill in the form below and we will get
+                             back to you as soon as possible.
+                        </p>
+                        <p>You can also<strong>Call Us</strong>on
                             <a href="tel:+55545667800" class="contact-details" aria-label="Go to our Phone Number">
                                 <i class="fas fa-phone-alt" aria-hidden="true"></i> 555 4657800
-                            </a>or 
-                            Join our group on Facebook or Instagram if you would like to follow our latest tours.
+                            </a>or join our Facebook and Instagram pages for more information and updates from our latest tours.
                         </p>
+                        <p>We look forward to hearing from you!</p>                        
                     </div>
                 </div>
             </div>
