add video to Tour section

--- a/gallery.html
+++ b/gallery.html
@@ -59,7 +59,13 @@
             </div>
         </div>
         <div class="container">
+
             <div class="row">
+                <div class="col-12">
+                    <p>Discover amazing walking trails, experience breath-taking views, and enjoy the crisp, fresh air with us! 
+                        There are loop walks, old favorites, and endless undiscovered and spectacular places in Ireland –<strong> lets explore together !</strong> 
+                    </p>
+                </div>
                 <div class="col-12 col-md-6 col-xl-3">
                     <a href="assets/images/gallery/girls-camping.jpg" target="_blank">
                         <img src="assets/images/gallery/girls-camping.jpg" class="image-style" alt="girls camping">
