--- a/index.html
+++ b/index.html
@@ -191,7 +191,35 @@
                 </div>
             </div>
         </div> 
-        
+            <div class="container">
+                <div class="row ">
+                    <div class="col tours-images-style">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md d-flex">
+                                <div class="card card-tours flex-fill">
+                                    <!-------CREDIT: Video from youtube.com made by Video © www.absolutevisuals.ie------->
+                                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/CdBXc3zW30Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="card-body-desc">
+                                        <h3 class="margin-text">Glendalough, Wicklow Tour</h3>
+                                    </div>
+                                </div>
+                            </div>
+
+                             <div class="col-md d-flex">
+                                <div class="card card-tours flex-fill">
+                                    <!-------CREDIT: Video from youtube.com made by https://graylineireland.com------->
+                                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/7o-Lh7m2Maw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="card-desc">
+                                        <h3 class="margin-text">Cliffs of Moher Cruise & Day Tour</h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
         </section>
     </div>
 
@@ -211,12 +239,12 @@
             <div class="container">
                 <div class="row content-item-text">
                     <div class="col">
-                        <p>
+                        <p class="margin">
                             If you would like to leave a comment or have a question about one of our tours or have 
                             a specific place you would like to visit, please fill in the form below and we will get
                              back to you as soon as possible.
                         </p>
-                        <p>You can also<strong>Call Us</strong>on
+                        <p class="margin">You can also<strong>Call Us</strong>on
                             <a href="tel:+55545667800" class="contact-details" aria-label="Go to our Phone Number">
                                 <i class="fas fa-phone-alt" aria-hidden="true"></i> 555 4657800
                             </a>or join our Facebook and Instagram pages for more information and updates from our latest tours.
